Removed broken cruft from my tmux rc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,24 +1,29 @@
-# UPDATE TMUX ALREADY!
-
+set -g history-limit 1000
 set -g prefix C-a
+set -g status-bg black
+set -g status-fg white
+set -g status-keys vi
+set -g status-keys vi
+set -g status-left '#[fg=cyan]#S'
+set -g status-right '#[fg=cyan]%H:%M %b %e'
+setw -g mode-keys vi
+setw -g mode-mouse off
+setw -g window-status-bg black
+setw -g window-status-current-bg black
+setw -g window-status-current-fg green
+setw -g window-status-fg red
 
-#bind-key r source-file ~/.tmux.conf
+unbind C-b
+unbind p
 
-bind-key C-a last-window
+# Defaults for horizontal and vertical split.  Hard to remember.
+unbind %
+unbind '"'
 
-#unbind %
-#unbind "
-#bind-key | split-window -h
-#bind-key – split-window -v
-
-# This doesn't work...
-bind-key a send-key C-a
-
-set-option -g status-keys vi
-set-option -g status-bg black
-set-option -g status-fg white
-set-window-option -g mode-keys vi
-set-window-option -g window-status-bg black
-set-window-option -g window-status-current-bg black
-
-#set-window-option -g mode-mouse on
+bind a send-prefix
+bind C-a last-window
+bind m command-prompt "split-window 'exec man %%'"
+bind r source-file ~/.tmux.conf
+bind S command-prompt "new-window -n %1 'ssh %1'"
+bind | split-window -h
+bind - split-window -v
