--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,5 +24,5 @@ bind C-a last-window
 bind m command-prompt "split-window 'exec man %%'"
 bind r source-file ~/.tmux.conf
 bind S command-prompt "new-window -n %1 'ssh %1'"
-bind | split-window -h
+bind \ split-window -h
 bind - split-window -v
