--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule ".zsh/zsh-git"]
-	path = .zsh/zsh-git
-	url = git://github.com/jcorbin/zsh-git.git
+[submodule ".vim/bundle/vim-colors-solarized"]
+	path = .vim/bundle/vim-colors-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
 [submodule ".vim/bundle/vim-pathogen"]
 	path = .vim/bundle/vim-pathogen
 	url = git://github.com/tpope/vim-pathogen.git
+[submodule ".zsh/zsh-git"]
+	path = .zsh/zsh-git
+	url = git://github.com/jcorbin/zsh-git.git
