--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,19 @@
-set  -g default-terminal "screen-256color"
-set  -g history-limit 1000
-set  -g prefix C-a
-set  -g status-bg black
-set  -g status-fg white
-set  -g status-keys vi
-set  -g status-keys vi
-set  -g status-left '#[fg=cyan]#S'
-set  -g status-right '#[fg=cyan]%H:%M %b %e'
-setw -g mode-keys vi
-setw -g mode-mouse off
-setw -g window-status-bg black
-setw -g window-status-current-bg black
-setw -g window-status-current-fg green
-setw -g window-status-fg red
+set  -g  default-terminal "screen-256color"
+set  -gs escape-time 0
+set  -g  history-limit 1000
+set  -g  prefix C-a
+set  -g  status-bg black
+set  -g  status-fg white
+set  -g  status-keys vi
+set  -g  status-keys vi
+set  -g  status-left '#[fg=cyan]#S'
+set  -g  status-right '#[fg=cyan]%H:%M %b %e'
+setw -g  mode-keys vi
+setw -g  mode-mouse off
+setw -g  window-status-bg black
+setw -g  window-status-current-bg black
+setw -g  window-status-current-fg green
+setw -g  window-status-fg red
 
 unbind C-b
 
