Make copy/paste work properly in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set  -g  default-command "reattach-to-user-namespace -l zsh"
 set  -g  default-terminal "screen-256color"
 set  -gs escape-time 0
 set  -g  history-limit 1000
@@ -15,16 +16,21 @@ setw -g  window-status-current-bg black
 setw -g  window-status-current-fg green
 setw -g  window-status-fg red
 
+# Old GNU screen habits die hard.
 unbind C-b
+bind a send-prefix
 
 # Defaults for horizontal and vertical split.  Hard to remember.
 unbind %
 unbind '"'
 
-bind a send-prefix
+# Use these instead.
+bind - split-window -v
+bind \ split-window -h
+
 bind C-a last-window
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 bind m command-prompt "split-window 'exec man %%'"
 bind r source-file ~/.tmux.conf
 bind S command-prompt "new-window -n %1 'ssh %1'"
-bind \ split-window -h
-bind - split-window -v
