--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule ".vim/bundle/vundle"]
+	path = .vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
 [submodule ".zsh/zsh-git"]
 	path = .zsh/zsh-git
 	url = git://github.com/jcorbin/zsh-git.git
