Assume .ssh/known_hosts.d contains a Makefile
.ssh/known_hosts.d/Makefile is not to be checked into VCS.  If this file
exists, it should describe how to fetch SSH known_hosts files from a
trusted source.  This will vary between my machines from site to site.

For now, do not invoke make recursively.  This simplifies the rules.

--- a/.ssh/Makefile
+++ b/.ssh/Makefile
@@ -8,16 +8,15 @@ config.d/default:
 	  chmod 600 "$@" ; \
 	fi
 
-config: $(filter-out config.d/default, $(wildcard config.d/*)) \
-	config.d/default
+config: $(filter-out config.d/default, $(wildcard config.d/*)) config.d/default
 	-chmod 600 "$@" 2>/dev/null
 	cat $^ > "$@"
 	chmod 400 "$@"
 
-known_hosts: $(wildcard known_hosts.d/*)
+known_hosts: $(filter-out known_hosts.d/Makefile, $(wildcard known_hosts.d/*))
 	-chmod 600 "$@" 2>/dev/null
-	if [ -n "$^" ]; then \
-	  cat $^ > $@ ; \
+	if [[ -n "$^" ]]; then \
+	  cat $^ >"$@" ; \
 	fi
 	touch "$@"
 	chmod 400 "$@"
