ssh: Rely on lexicographical order of file names

--- a/.ssh/Makefile
+++ b/.ssh/Makefile
@@ -1,19 +1,17 @@
+.PHONY: all
 all: config known_hosts
 
-.PHONY: all
 
-config.d/default:
-	if [[ ! -e "$@" ]]; then \
-	  touch "$@" && \
-	  chmod 600 "$@" ; \
-	fi
-
-config: $(filter-out config.d/default, $(wildcard config.d/*)) config.d/default
+config: $(sort $(wildcard config.d/*))
 	-chmod 600 "$@" 2>/dev/null
-	cat $^ > "$@"
+	if [[ -n "$^" ]]; then \
+		cat $^ > "$@" ; \
+	fi
+	touch "$@"
 	chmod 400 "$@"
 
-known_hosts: $(filter-out known_hosts.d/Makefile, $(wildcard known_hosts.d/*))
+
+known_hosts: $(filter-out known_hosts.d/Makefile, $(sort $(wildcard known_hosts.d/*)))
 	-chmod 600 "$@" 2>/dev/null
 	if [[ -n "$^" ]]; then \
 	  cat $^ >"$@" ; \
