vimoutliner: Enable clock plugin
I'm doing a spot of consulting and would like to track the time I spend
on various tasks.

    :h votl-clock

https://github.com/vimoutliner/vimoutliner/blob/master/doc/votl.txt

--- a/.vimoutlinerrc
+++ b/.vimoutlinerrc
@@ -3,6 +3,6 @@
 let maplocalleader = ',,'
 
 " Enable the smart paste plugin.
-let g:vo_modules_load = 'smart_paste'
+let g:vo_modules_load = 'clock:smart_paste'
 
 " vim:ft=vim
