alacritty: add = and * to semantic_escape_chars

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -72,7 +72,7 @@ mouse:
     modifiers: Command
 
 selection:
-  semantic_escape_chars: ",│`|:\"' ()[]{}<>"
+  semantic_escape_chars: ",│`|:\"' ()[]{}<>=*"
   save_to_clipboard: true
 
 dynamic_title: true
