scons: extend backwards compat to py2.6

--- a/.ssh/SConscript
+++ b/.ssh/SConscript
@@ -1,18 +1,27 @@
+# Remain backwards compatible with Python 2.6 for now.
+
 import subprocess
 import shutil
 
-from subprocess import DEVNULL
+
+def run(argv):
+    subprocess.check_call(argv)
+
+
+def run_discard_err(argv):
+    with open("/dev/null", "w") as devnull:
+        subprocess.call(argv, stderr=devnull)
 
 
 def concat(target, source, env):
     dst = str(target[0])
     srcs = sorted(str(s) for s in source)
-    subprocess.run(["chmod", "0600", dst], stderr=DEVNULL, check=False)
+    run_discard_err(["chmod", "0600", dst])
     with open(dst, "w") as fdst:
         for src in srcs:
             with open(src) as fsrc:
                 shutil.copyfileobj(fsrc, fdst)
-    subprocess.run(["chmod", "0400", dst], check=True)
+    run(["chmod", "0400", dst])
 
 
 Import("env")
